--- a/gitops/applications/base/monitoring-post-config/kustomization.yaml
+++ b/gitops/applications/base/monitoring-post-config/kustomization.yaml
@@ -25,4 +25,5 @@ resources:
 configMapGenerator:
   - name: mimir-ruler-data
     files:
-      - alerts-storage.yaml 
+      - alerts-storage.yaml
+      - alerts-resources.yaml
