--- a/gitops/applications/overlays/cloud_provider/aws/xplane-provider-config/composition-rds.yaml
+++ b/gitops/applications/overlays/cloud_provider/aws/xplane-provider-config/composition-rds.yaml
@@ -122,14 +122,8 @@ spec:
           patchSetName: metadata
         - fromFieldPath: "spec.parameters.region"
           toFieldPath: "spec.forProvider.region"
-        - fromFieldPath: spec.parameters.size
+        - fromFieldPath: spec.parameters.dbClusterInstanceClass
           toFieldPath: spec.forProvider.dbClusterInstanceClass
-          transforms:
-          - type: map
-            map:
-              small: db.m5d.large
-              medium: db.m5d.2xlarge
-              large: db.m5d.8xlarge
         - fromFieldPath: spec.parameters.username
           toFieldPath: spec.forProvider.masterUsername
         - fromFieldPath: spec.parameters.dbName
