--- a/gitops/applications/base/monitoring-post-config/alerts-storage.yaml
+++ b/gitops/applications/base/monitoring-post-config/alerts-storage.yaml
@@ -47,14 +47,21 @@ groups:
     interval: 30s # TODO: update this after development
     rules:
       - alert: Node - High CPU usage - 
-        expr: (1 - avg(rate(node_cpu_seconds_total{mode="idle"}[5m])) without (cpu)) * 100 > 20
+        expr: (1 - avg(rate(node_cpu_seconds_total{mode="idle"}[5m])) without (cpu)) * 100 > 80
+        for: 2m
+        labels:
+          severity: warning
+        annotations:
+          summary: "Node={{ $labels.nodename }} is using {{ printf \"%.2f\" $value }}% CPU."
+          description: "LABELS = {{ $labels }}"
+      - alert: Node - High RAM usage -
+        expr: (1 - node_memory_MemFree_bytes/node_memory_MemTotal_bytes) * 100 > 20
         for: 0m
         labels:
           severity: warning
         annotations:
-          summary: "Node {{ $labels.nodename }} is using {{ printf \"%.2f\" $value }}% CPU.  "
-          description: "LABELS = {{ $labels }}"
-      # - alert: Node - High RAM usage -
+          summary: "Node={{ $labels.nodename }} is using {{ printf \"%.2f\" $value }}% RAM."
+          description: "LABELS = {{ $labels }}"      
       # - alert: K8s - High pod CPU usage - 
       # - alert: K8s - High pod memory usage - 
 
