--- a/gitops/argo-apps/base/utils-post-config.yaml
+++ b/gitops/argo-apps/base/utils-post-config.yaml
@@ -48,6 +48,9 @@ spec:
         - name: "crossplane_namespace"
           value: "${ARGOCD_ENV_utils_crossplane_namespace}"
 
+        - name: "rook_ceph_namespace"
+          value: "${ARGOCD_ENV_utils_rook_ceph_namespace}"
+
         - name: "aws_crossplane_module_version"
           value: "${ARGOCD_ENV_utils_post_config_aws_crossplane_module_version}"          
 
