--- a/gitops/applications/base/monitoring/values-mimir.yaml
+++ b/gitops/applications/base/monitoring/values-mimir.yaml
@@ -25,7 +25,7 @@ mimir:
       compactor_blocks_retention_period: ${ARGOCD_ENV_mimir_retention_period}
       max_label_names_per_series: ${ARGOCD_ENV_mimir_max_label_names_per_series}
     common:
-      storage: 
+      storage:
         backend: s3
         s3:
           access_key_id: $${AWS_ACCESS_KEY_ID}
@@ -82,14 +82,14 @@ querier:
   extraEnvVarsCM: ${ARGOCD_ENV_mimir_bucket_name}
   extraEnvVarsSecret: ${ARGOCD_ENV_mimir_bucket_name}
 
-queryFrontend: 
+queryFrontend:
   replicaCount: ${ARGOCD_ENV_mimir_query_frontend_replica_count}
   resources:
     limits:
       cpu: ${ARGOCD_ENV_mimir_query_frontend_limits_cpu}
       memory: ${ARGOCD_ENV_mimir_query_frontend_limits_memory}
 
-compactor: 
+compactor:
   replicaCount: ${ARGOCD_ENV_mimir_compactor_replica_count}
   extraEnvVarsCM: ${ARGOCD_ENV_mimir_bucket_name}
   extraEnvVarsSecret: ${ARGOCD_ENV_mimir_bucket_name}
@@ -100,7 +100,7 @@ compactor:
   persistence:
     size: ${ARGOCD_ENV_mimir_compactor_storage_size}
 
-storeGateway: 
+storeGateway:
   replicaCount: ${ARGOCD_ENV_mimir_store_gateway_replica_count}
   resources:
     limits:
@@ -117,21 +117,18 @@ ruler:
   resources:
     limits:
       cpu: ${ARGOCD_ENV_mimir_ruler_limits_cpu}
-      memory: ${ARGOCD_ENV_mimir_ruler_limits_memory}  
+      memory: ${ARGOCD_ENV_mimir_ruler_limits_memory}
   extraEnvVarsCM: ${ARGOCD_ENV_mimir_bucket_name}
-  extraEnvVarsSecret: ${ARGOCD_ENV_mimir_bucket_name}  
+  extraEnvVarsSecret: ${ARGOCD_ENV_mimir_bucket_name}
 
 alertmanager:
   enabled: true
   replicaCount: ${ARGOCD_ENV_mimir_alertmanager_replica_count}
   resources:
     limits:
-      # cpu: ${ARGOCD_ENV_mimir_alertmanager_limits_cpu}
-      # memory: ${ARGOCD_ENV_mimir_alertmanager_limits_memory}  
-      cpu: "100m"
-      memory: "256Mi"        
+      cpu: ${ARGOCD_ENV_mimir_alertmanager_limits_cpu}
+      memory: ${ARGOCD_ENV_mimir_alertmanager_limits_memory}
   extraEnvVarsCM: ${ARGOCD_ENV_mimir_bucket_name}
   extraEnvVarsSecret: ${ARGOCD_ENV_mimir_bucket_name}
   persistence:
-    # size: ${ARGOCD_ENV_mimir_alertmanager_storage_size}
-    size: "30Gi"
+    size: ${ARGOCD_ENV_mimir_alertmanager_storage_size}
