add a recording rule

--- a/gitops/applications/base/monitoring-post-config/mimirtool-cronjob.yaml
+++ b/gitops/applications/base/monitoring-post-config/mimirtool-cronjob.yaml
@@ -17,6 +17,7 @@ spec:
                 - |
                   echo 'Running job';
                   mimirtool rules sync /etc/mimir-ruler/alerts-*.yaml --address  http://central-monitoring-grafana-mimir-ruler:8080 --id infitx;
+                  mimirtool rules sync /etc/mimir-ruler/recording-rules-*.yaml --address  http://central-monitoring-grafana-mimir-ruler:8080 --id infitx;
                   # mimirtool rules print --address  http://central-monitoring-grafana-mimir-ruler:8080 --id infitx;
                   mimirtool alertmanager load /etc/mimir-alertmanager/config.yaml --address  http://central-monitoring-grafana-mimir-alertmanager:8080 --id infitx;
                   # mimirtool alertmanager get --address  http://central-monitoring-grafana-mimir-alertmanager:8080 --id infitx;
