--- a/gitops/applications/overlays/rdbms_provider/rds/helmcharts/dbmr/values.yaml
+++ b/gitops/applications/overlays/rdbms_provider/rds/helmcharts/dbmr/values.yaml
@@ -2,7 +2,7 @@ namePrefix: awesomecc
 name: gitlabdb
 namespace: "gitlab"
 region: eu-west-1
-engine: "postgres"
+engine: "posgresql"
 engineVersion: "16"
 dbClusterInstanceClass: "db.t3.medium"
 storageGB: 10
@@ -21,3 +21,4 @@ backupRetentionPeriod: 1
 preferredBackupWindow: 07:00-09:00
 storageEncrypted: true
 skipFinalSnapshot: false
+replicaCount: 1
