go templates in compositions

--- a/gitops/applications/overlays/cloud_provider/aws/xplane-provider-config/composition-rds-aurora.yaml
+++ b/gitops/applications/overlays/cloud_provider/aws/xplane-provider-config/composition-rds-aurora.yaml
@@ -9,7 +9,7 @@ metadata:
 spec:
   compositeTypeRef:
     apiVersion: infitx.org/v1alpha1
-    kind: RDSAuroraDBInstance
+    kind: RDSAuroraDBCluster
   mode: Pipeline
   pipeline:
   - functionRef:
