--- a/gitops/applications/overlays/cloud_provider/aws/xplane-provider-config/composition-rds.yaml
+++ b/gitops/applications/overlays/cloud_provider/aws/xplane-provider-config/composition-rds.yaml
@@ -9,7 +9,7 @@ metadata:
 spec:
   compositeTypeRef:
     apiVersion: infitx.org/v1alpha1
-    kind: RDSDBInstance
+    kind: RDSDBCluster
   mode: Pipeline
   pipeline:
   - functionRef:
