--- a/gitops/applications/overlays/cloud_provider/aws/xplane-provider-config/xr-definition-rds.yaml
+++ b/gitops/applications/overlays/cloud_provider/aws/xplane-provider-config/xr-definition-rds.yaml
@@ -1,15 +1,15 @@
 apiVersion: apiextensions.crossplane.io/v1
 kind: CompositeResourceDefinition
 metadata:
-  name: rdsdbinstances.infitx.org
+  name: rdsdbclusters.infitx.org
 spec:
   group: infitx.org
   names:
-    kind: RDSDBInstance
-    plural: rdsdbinstances
+    kind: RDSDBCluster
+    plural: rdsdbclusters
   claimNames:
-    kind: RDSDBInstanceClaim
-    plural: rdsdbinstanceclaims
+    kind: RDSDBClusterClaim
+    plural: rdsdbclusterclaims
   versions:
   - name: v1alpha1
     served: true
