--- a/gitops/applications/overlays/cloud_provider/aws/xplane-provider-config/kustomization.yaml
+++ b/gitops/applications/overlays/cloud_provider/aws/xplane-provider-config/kustomization.yaml
@@ -7,3 +7,5 @@ resources:
   - composition-rds.yaml
   - xr-definition-rds-aurora.yaml
   - composition-rds-aurora.yaml  
+  - composition-rds-aurora-replica.yaml
+  - xr-definition-rds-aurora-replica.yaml
