--- a/gitops/argo-apps/base/monitoring.yaml
+++ b/gitops/argo-apps/base/monitoring.yaml
@@ -145,10 +145,19 @@ spec:
         - name: "mimir_alertmanager_storage_size"
           value: "${ARGOCD_ENV_monitoring_mimir_alertmanager_storage_size}"
 
+
+        - name: "mimir_distributor_requests_cpu"
+          value: "${ARGOCD_ENV_monitoring_mimir_distributor_requests_cpu}"
+        - name: "mimir_distributor_requests_memory"
+          value: "${ARGOCD_ENV_monitoring_mimir_distributor_requests_memory}"
         - name: "mimir_distributor_limits_cpu"
           value: "${ARGOCD_ENV_monitoring_mimir_distributor_limits_cpu}"
         - name: "mimir_distributor_limits_memory"
           value: "${ARGOCD_ENV_monitoring_mimir_distributor_limits_memory}"
+        - name: "mimir_ingester_requests_cpu"
+          value: "${ARGOCD_ENV_monitoring_mimir_ingester_requests_cpu}"
+        - name: "mimir_ingester_requests_memory"
+          value: "${ARGOCD_ENV_monitoring_mimir_ingester_requests_memory}"
         - name: "mimir_ingester_limits_cpu"
           value: "${ARGOCD_ENV_monitoring_mimir_ingester_limits_cpu}"
         - name: "mimir_ingester_limits_memory"
