--- a/gitops/argo-apps/base/utils-post-config.yaml
+++ b/gitops/argo-apps/base/utils-post-config.yaml
@@ -56,3 +56,6 @@ spec:
 
         - name: "k8s_crossplane_module_version"
           value: "${ARGOCD_ENV_utils_post_config_k8s_crossplane_module_version}"
+
+        - name: "crossplane_func_go_templating_version"
+          value: "${ARGOCD_ENV_utils_post_config_crossplane_func_go_templating_version}"
