--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -32,6 +32,7 @@ ansible_crossplane_modules_version: "0.6.0"
 aws_crossplane_module_version: "0.49.2"
 crossplane_func_pat_version: "0.2.1"
 k8s_crossplane_module_version: "0.11.4"
+crossplane_func_go_templating_version: "0.8.0"
 velero_helm_version: "7.2.1"
 velero_plugin_version: "v1.10.1"
 coredns_localcache_version: "1.11.3"
