--- a/gitops/applications/overlays/cloud_provider/aws/xplane-provider-config/composition-rds-aurora.yaml
+++ b/gitops/applications/overlays/cloud_provider/aws/xplane-provider-config/composition-rds-aurora.yaml
@@ -23,6 +23,8 @@ spec:
         patches:
         - fromFieldPath: metadata.annotations
           toFieldPath: metadata.annotations
+        - fromFieldPath: metadata.labels
+          toFieldPath: metadata.labels          
         - fromFieldPath: spec.id
           toFieldPath: metadata.name
       resources:
