--- a/gitops/applications/overlays/cloud_provider/aws/xplane-provider-config/composition-rds-aurora-replica.yaml
+++ b/gitops/applications/overlays/cloud_provider/aws/xplane-provider-config/composition-rds-aurora-replica.yaml
@@ -26,7 +26,7 @@ spec:
             apiVersion: rds.aws.crossplane.io/v1alpha1
             kind: DBInstance
             metadata:
-              name: test-{{ $i }}
+              name: "{{ $.observed.composite.resource.spec.dbClusterName }}-replica-{{ $i }}"
               annotations:
                 {{ setResourceNameAnnotation (print "test-" $i) }}
             spec:
