--- a/gitops/applications/overlays/rdbms_provider/rds/helmcharts/dbmr/templates/mr.yaml
+++ b/gitops/applications/overlays/rdbms_provider/rds/helmcharts/dbmr/templates/mr.yaml
@@ -57,6 +57,10 @@ apiVersion: infitx.org/v1alpha1
 kind: RDSAuroraReplicaClaim
 metadata:
   name: {{ printf "%s-%s" .Values.namePrefix  .Values.name }}
+  namespace: {{ .Values.namespace }} 
+  annotations:
+    organization: Infitx
+    author: devops   
 spec:
   compositionSelector:
     matchLabels:
