--- a/gitops/applications/overlays/cloud_provider/aws/xplane-provider-config/xr-definition-rds-aurora-replica.yaml
+++ b/gitops/applications/overlays/cloud_provider/aws/xplane-provider-config/xr-definition-rds-aurora-replica.yaml
@@ -3,6 +3,7 @@ kind: CompositeResourceDefinition
 metadata:
   name: rdsaurorareplica.infitx.org
 spec:
+  defaultCompositeDeletePolicy: Foreground
   group: infitx.org
   names:
     kind: RDSAuroraReplica
