--- a/gitops/applications/overlays/cloud_provider/aws/xplane-provider-config/xr-definition-rds-aurora.yaml
+++ b/gitops/applications/overlays/cloud_provider/aws/xplane-provider-config/xr-definition-rds-aurora.yaml
@@ -3,6 +3,7 @@ kind: CompositeResourceDefinition
 metadata:
   name: rdsauroradbclusters.infitx.org
 spec:
+  defaultCompositeDeletePolicy: Foreground
   group: infitx.org
   names:
     kind: RDSAuroraDBCluster
