--- a/terraform/k8s/default-config/mojaloop-stateful-resources-managed.yaml
+++ b/terraform/k8s/default-config/mojaloop-stateful-resources-managed.yaml
@@ -8,10 +8,11 @@ mcm-db:
     backup_window: 01:00-04:00
     db_name: mcm
     deletion_protection: false
-    engine: mysql
+    engine: 8.0.mysql_aurora.3.04.0
     engine_version: "8.0"
     family: mysql8.0
-    instance_class: db.m5d.large
+    instance_class: db.t3.medium
+    replicas: 2
     maintenance_window: Sun:04:00-Sun:06:00
     major_engine_version: "8.0"
     monitoring_interval: "30"
@@ -49,10 +50,11 @@ account-lookup-db:
     backup_window: 01:00-04:00
     db_name: account_lookup
     deletion_protection: false
-    engine: mysql
+    engine: 8.0.mysql_aurora.3.04.0
     engine_version: "8.0"
     family: mysql8.0
-    instance_class: db.m5d.large
+    instance_class: db.t3.medium
+    replicas: 2
     maintenance_window: Sun:04:00-Sun:06:00
     major_engine_version: "8.0"
     monitoring_interval: "30"
@@ -88,10 +90,11 @@ central-ledger-db:
     backup_window: 01:00-04:00
     db_name: central_ledger
     deletion_protection: false
-    engine: mysql
+    engine: 8.0.mysql_aurora.3.04.0
     engine_version: "8.0"
     family: mysql8.0
-    instance_class: db.m5d.large
+    instance_class: db.t3.medium
+    replicas: 2
     maintenance_window: Sun:04:00-Sun:06:00
     major_engine_version: "8.0"
     monitoring_interval: "30"
@@ -236,10 +239,11 @@ keycloak-db:
     backup_window: 01:00-04:00
     db_name: keycloak
     deletion_protection: false
-    engine: mysql
+    engine: 8.0.mysql_aurora.3.04.0
     engine_version: "8.0"
     family: mysql8.0
-    instance_class: db.m5d.large
+    instance_class: db.t3.medium
+    replicas: 2
     maintenance_window: Sun:04:00-Sun:06:00
     major_engine_version: "8.0"
     monitoring_interval: "30"
@@ -275,10 +279,11 @@ keto-db:
     backup_window: 01:00-04:00
     db_name: keto
     deletion_protection: false
-    engine: mysql
+    engine: 8.0.mysql_aurora.3.04.0
     engine_version: "8.0"
     family: mysql8.0
-    instance_class: db.m5d.large
+    instance_class: db.t3.medium
+    replicas: 2
     maintenance_window: Sun:04:00-Sun:06:00
     major_engine_version: "8.0"
     monitoring_interval: "30"
@@ -314,10 +319,11 @@ kratos-db:
     backup_window: 01:00-04:00
     db_name: kratos
     deletion_protection: false
-    engine: mysql
+    engine: 8.0.mysql_aurora.3.04.0
     engine_version: "8.0"
     family: mysql8.0
-    instance_class: db.m5d.large
+    instance_class: db.t3.medium
+    replicas: 2
     maintenance_window: Sun:04:00-Sun:06:00
     major_engine_version: "8.0"
     monitoring_interval: "30"
