fix template for external secret

--- a/gitops/applications/base/monitoring-post-config/mimir-alertmanager.yaml
+++ b/gitops/applications/base/monitoring-post-config/mimir-alertmanager.yaml
@@ -95,7 +95,7 @@ spec:
               slack_configs:
                 - api_url: {{.webhook}}
                   send_resolved: true
-                  title: [{{ .Status  }}] {{ .GroupLabels.cluster }} | {{ .GroupLabels.alertname }}
+                  title: {{ `[{{ .Status  }}] {{ .GroupLabels.cluster }} | {{ .GroupLabels.alertname }}` }}
                   text: {{ `"{{ range .Alerts }}{{ .Annotations.summary }}\n{{ end }}"` }}
                   title_link: http://${ARGOCD_ENV_grafana_web_name}.${ARGOCD_ENV_grafana_dns_subdomain}/alerting/groups
             - name: 'jira'
