--- a/terraform/k8s/default-config/mojaloop-stateful-resources-managed.yaml
+++ b/terraform/k8s/default-config/mojaloop-stateful-resources-managed.yaml
@@ -31,7 +31,7 @@ mcm-db:
     port: "3306"
     skip_final_snapshot: true
     multi_az: false
-    storage_encrypted: false
+    storage_encrypted: true
     tags:
       Origin: Terraform
       mojaloop/cost_center: mlf-iac-sandbox
@@ -71,7 +71,7 @@ account-lookup-db:
     port: "3306"
     skip_final_snapshot: true
     multi_az: false
-    storage_encrypted: false
+    storage_encrypted: true
     tags:
       Origin: Terraform
       mojaloop/cost_center: mlf-iac-sandbox
@@ -111,7 +111,7 @@ central-ledger-db:
     port: "3306"
     skip_final_snapshot: true
     multi_az: false
-    storage_encrypted: false
+    storage_encrypted: true
     tags:
       Origin: Terraform
       mojaloop/cost_center: mlf-iac-sandbox
@@ -260,7 +260,7 @@ keycloak-db:
     port: "3306"
     skip_final_snapshot: true
     multi_az: false
-    storage_encrypted: false
+    storage_encrypted: true
     tags:
       Origin: Terraform
       mojaloop/cost_center: mlf-iac-sandbox
@@ -300,7 +300,7 @@ keto-db:
     port: "3306"
     skip_final_snapshot: true
     multi_az: false
-    storage_encrypted: false
+    storage_encrypted: true
     tags:
       Origin: Terraform
       mojaloop/cost_center: mlf-iac-sandbox
@@ -340,7 +340,7 @@ kratos-db:
     port: "3306"
     skip_final_snapshot: true
     multi_az: false
-    storage_encrypted: false
+    storage_encrypted: true
     tags:
       Origin: Terraform
       mojaloop/cost_center: mlf-iac-sandbox
